# X152b

./: .gitignore  .gitmodules  LICENSE  README.md
scripts/: build.sh  common_func.sh  find_config.py  init_uav.sh  ipc_run.sh  ipc_setup.sh  kill_one_shot.sh  kill_uav.sh  land.sh  one_shot_single.sh  openvins_run.sh  openvins_setup.sh  restart_px4_firmware.sh  run_ego_v1.sh  run_egoplanner.sh  run_vinsfusion.sh  take_off.sh  vins_fusion_run.sh  vins_fusion_setup.sh
src/autonomous_drone_sdk/: README.md
src/autonomous_drone_sdk/global_interface/config/ego_planner_swarm_v1/: depth_camera.yaml
src/autonomous_drone_sdk/global_interface/config/open_vins/: estimator_config.yaml  kalibr_imucam_chain.yaml
src/autonomous_drone_sdk/global_interface/config/vins_fusion/: realsense_stereo_imu_config.yaml
src/autonomous_drone_sdk/global_interface/launch/: driver_start.launch
src/autonomous_drone_sdk/modules/control_driver/single_offb_pkg/: CMakeLists.txt
src/autonomous_drone_sdk/modules/control_driver/swarm_offb_pkg/: package.xml
src/autonomous_drone_sdk/modules/msg_socket_bridge/: .gitignore
src/autonomous_drone_sdk/modules/msg_socket_bridge/src/: ping.py
src/autonomous_drone_sdk/modules/serial_driver/: CMakeLists.txt
src/autonomous_drone_sdk/modules/serial_driver/launch/: wt_serial.launch
src/autonomous_drone_sdk/modules/serial_driver/src/: serial_node.cpp
src/core/global_interface/: CMakeLists.txt
src/core/global_interface/config/: mission.yaml
src/core/global_interface/config/vins/: left.yaml
src/core/global_interface/launch/: driver_start.launch
src/core/io/msg_socket_bridge/: CMakeLists.txt  README.md  package.xml
src/core_io/camera_driver/: CMakeLists.txt  package.xml
src/core_io/camera_driver/cfg/: UsbCamera.cfg
src/core_io/camera_driver/config/: camera.yaml  camera_driver.rviz  camera_info.yaml  realsense_depth_camera.yaml
src/core_io/camera_driver/include/camera/: usb_cam.hpp  usb_cam_node.hpp
src/core_io/camera_driver/launch/: rs_d430_camera.launch  rs_d435i_camera.launch  usb_cam.launch  usb_ccd_camera.launch
src/core_io/camera_driver/src/: usb_cam.cpp  usb_cam_node.cpp  usb_cam_node_main.cpp
src/core_io/control_driver/swarm_offb_pkg/: CMakeLists.txt  package.xml
src/core_io/control_driver/swarm_offb_pkg/src/: capture_pid.cpp  capture_robust.cpp  formation_capture copy.cpp  leader_regular_motion.cpp  mpCtrl_formation_capture_copy.cpp  rl_ctrl.cpp
src/core_io/msg_socket_bridge/: package.xml
src/core_io/msg_socket_bridge/include/msg_socket_bridge/: ModeUdpbc.hpp  MsgMavrosPositionTarget.hpp  MsgPointcloud.hpp  bridge.hpp  udp_socket.hpp
src/core_io/msg_socket_bridge/src/: bridge_node.cpp  ping.py  plot_drone_debug.py
src/core_io/msg_socket_bridge/tools/: find_dep.py
src/core_io/serial_driver/: package.xml
src/emnavi_sdk/: README.md
src/emnavi_sdk/global_interface/: CMakeLists.txt
src/emnavi_sdk/global_interface/config/: drone_param.yaml
src/emnavi_sdk/global_interface/config/ego_planner_swarm_v1/: param.xml
src/emnavi_sdk/global_interface/config/open_vins/: estimator_config.yaml
src/emnavi_sdk/global_interface/config/vins_fusion/: realsense_stereo_imu_config.yaml
src/emnavi_sdk/modules/control_driver/: README.md
src/emnavi_sdk/modules/control_driver/single_offb_pkg/: CMakeLists.txt  package.xml
src/emnavi_sdk/modules/control_driver/single_offb_pkg/include/: qr_controller.h
src/emnavi_sdk/modules/control_driver/single_offb_pkg/src/: qr_controller.cpp  save_traj.py  uav_ctrl.cpp
src/emnavi_sdk/modules/msg_socket_bridge/: CMakeLists.txt
src/emnavi_sdk/modules/msg_socket_bridge/include/msg_socket_bridge/: MsgFloat64MultiArray.hpp  MsgOdometry2.hpp
src/emnavi_sdk/modules/msg_socket_bridge/launch/: bridge.launch  bridge_test.launch
src/emnavi_sdk/modules/msg_socket_bridge/tools/: gen_msg.py
src/emnavi_sdk/realsense_driver/: CMakeLists.txt  package.xml
src/emnavi_sdk/realsense_driver/launch/: rs_d430_camera.launch
src/global_interface/: CMakeLists.txt
src/global_interface/config/: drone_param.yaml
src/global_interface/config/ego_plan/: param.xml  point_param.yaml
src/global_interface/config/open_vins/: kalibr_imu_chain.yaml
src/global_interface/config/vins/: realsense_stereo_imu_config.yaml  right.yaml
src/global_interface/config/vins_fusion/: realsense_stereo_imu_config.yaml
src/global_interface/config/vins_fusion/output/: bias.txt  stamped_traj_estimate.txt
src/global_interface/launch/: driver_start.launch
src/simulator/: README.md
src/tools/: find_config.py
(+14 files in other folders)
