<?xml version="1.0"?>
<package format="2">
  <name>realsense_driver</name>
  <version>0.0.0</version>
  <description>The realsense_driver package</description>

  <maintainer email="emnavi@todo.todo">emnavi</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <export>
  </export>
</package>